--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ reqwest = { version = "0.12.4", features = ["json"] }
 scraper = "0.19.0"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.199", features = ["derive"] }
+fantoccini = "0.19.3"
+serde_derive = "1.0"
+serde-xml-rs = "0.6.0"
